Bug 1401821 - nsTextFormatter "*" width argument comes before the actual argument. r=froydnj, a=sledru

Bug 1388789 introduced a bug breaking formats like "%*.f".  The problem
was that the next "natural" argument was taken before the "*" width
argument.

MozReview-Commit-ID: BZack9faY7a